# Canfigger ChangeLog

2021-06-24

  * The docs now install when 'ninja install' is run
  * canfigger v0.1.1 released

2021-06-09

  * If doing an early return due to error, the file descriptor now gets
  closed properly.

2021-06-06

  * v0.1.0 released (initial release)