@@ -1,5 +1,10 @@
 # Canfigger ChangeLog
 
+2021-12-21
+
+  * Implement function that can retrieve a user's home, config, and
+  data directories
+
 2021-06-24
 
   * The docs now install when 'ninja install' is run
